# Multi-Agent-Swiss-Airlines-Support-Assistant

./: .env.sample  .gitignore  README.md  pyproject.toml
db/chroma_db/: chroma.sqlite3
db/chroma_db_faq/: chroma.sqlite3
db/swiss_faq_chroma/: chroma.sqlite3
notebooks/: part1_and_part2.ipynb  part3.ipynb  part4_final_bot.ipynb  test.py
src/: app.py
src/assistants/: graph.py
src/tools/: __init__.py  car_rental_tools.py  excursion_tools.py  flight_tools.py  hotel_tools.py  policy_tools.py
src/utils/: db_setup.py  vectorstore_setup.py
